new changes done

--- a/our-work.html
+++ b/our-work.html
@@ -142,7 +142,7 @@
                       aria-controls="ecommerce"
                       aria-selected="true"
                     >
-                      Ecommerce
+                      Web Design & Development
                     </button>
                   </li>
                   <li class="nav-item" role="presentation">
@@ -156,7 +156,7 @@
                       aria-controls="fitness"
                       aria-selected="false"
                     >
-                      Fitness
+                      Search Engine Optimization
                     </button>
                   </li>
                   <li class="nav-item" role="presentation">
@@ -170,7 +170,7 @@
                       aria-controls="state"
                       aria-selected="false"
                     >
-                      Real Estate
+                      Social Media Marketing
                     </button>
                   </li>
                   <li class="nav-item" role="presentation">
@@ -184,7 +184,7 @@
                       aria-controls="fintch"
                       aria-selected="false"
                     >
-                      Fintech
+                      Pay Per Click
                     </button>
                   </li>
                   <li class="nav-item" role="presentation">
@@ -198,7 +198,7 @@
                       aria-controls="food"
                       aria-selected="false"
                     >
-                      Restaurants
+                      App Development
                     </button>
                   </li>
                   <li class="nav-item" role="presentation">
@@ -212,7 +212,7 @@
                       aria-controls="construction"
                       aria-selected="false"
                     >
-                      Construction
+                      Logo Design
                     </button>
                   </li>
                 </ul>
