--- a/web-design-&-development.html
+++ b/web-design-&-development.html
@@ -1160,7 +1160,7 @@
                             <div class="generic-panel">
                                 <div class="generic-panel__head generic-heading">
                                     <div class="generic-heading__small-heading generic-heading__small-heading--left-icon text-capitalize animate fadein-Up">
-                                        <a href="case-study-ecommerce.html" bis_skin_checked="1">
+                                        <a href="case-study-fitness.html" bis_skin_checked="1">
                                             <span><strong>See Case Studies</strong></span>
                                         </a>
                                     </div>
@@ -1247,7 +1247,7 @@
                             <div class="generic-panel">
                                 <div class="generic-panel__head generic-heading">
                                     <div class="generic-heading__small-heading generic-heading__small-heading--left-icon text-capitalize animate fadein-Up">
-                                        <a href="case-study-ecommerce.html" bis_skin_checked="1">
+                                        <a href="case-study-realestate.html" bis_skin_checked="1">
                                             <span><strong>See Case Studies</strong></span>
                                         </a>
                                     </div>
@@ -1332,7 +1332,7 @@
                             <div class="generic-panel">
                                 <div class="generic-panel__head generic-heading">
                                     <div class="generic-heading__small-heading generic-heading__small-heading--left-icon text-capitalize animate fadein-Up">
-                                        <a href="case-study-ecommerce.html" bis_skin_checked="1">
+                                        <a href="case-study-fintech.html" bis_skin_checked="1">
                                             <span><strong>See Case Studies</strong></span>
                                         </a>
                                     </div>
@@ -1417,7 +1417,7 @@
                             <div class="generic-panel">
                                 <div class="generic-panel__head generic-heading">
                                     <div class="generic-heading__small-heading generic-heading__small-heading--left-icon text-capitalize animate fadein-Up">
-                                        <a href="case-study-ecommerce.html" bis_skin_checked="1">
+                                        <a href="case-study-restaurants.html" bis_skin_checked="1">
                                             <span><strong>See Case Studies</strong></span>
                                         </a>
                                     </div>
@@ -1502,7 +1502,7 @@
                             <div class="generic-panel">
                                 <div class="generic-panel__head generic-heading">
                                     <div class="generic-heading__small-heading generic-heading__small-heading--left-icon text-capitalize animate fadein-Up">
-                                        <a href="case-study-ecommerce.html" bis_skin_checked="1">
+                                        <a href="case-study-construction.html" bis_skin_checked="1">
                                             <span><strong>See Case Studies</strong></span>
                                         </a>
                                     </div>
