--- a/case-study-construction.html
+++ b/case-study-construction.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Case Study eCommerce-Digitexsol</title>
+    <title>Case Study Construction-Digitexsol</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -124,13 +124,13 @@
                 <a
                   class="black"
                   data-fancybox="port"
-                  href="assets/images/web-services/ortfolio-img-1-r.webp"
+                  href="assets/images/web-services/const-img-1-r.webp"
                   bis_skin_checked="1"
                 >
                   <figure>
                     <img
                       class="lazy loaded"
-                      src="assets/images/web-services/ortfolio-img-1-r.webp"
+                      src="assets/images/web-services/const-img-1-r.webp"
                       alt="portfolio"
                       data-was-processed="true"
                       loading="lazy"
@@ -146,13 +146,13 @@
                 <a
                     class="black"
                     data-fancybox="port"
-                    href="assets/images/web-services/ortfolio-img-2-r.webp"
+                    href="assets/images/web-services/const-img-2-r.webp"
                     bis_skin_checked="1"
                 >
                     <figure>
                     <img
                         class="lazy loaded"
-                        src="assets/images/web-services/ortfolio-img-2-r.webp"
+                        src="assets/images/web-services/const-img-2-r.webp"
                         alt="portfolio"
                         data-was-processed="true"
                         loading="lazy"
@@ -199,13 +199,13 @@
                 <a
                   class="black"
                   data-fancybox="port"
-                  href="assets/images/web-services/ortfolio-img-3-r.webp"
+                  href="assets/images/web-services/const-img-3-r.webp"
                   bis_skin_checked="1"
                 >
                   <figure>
                     <img
                       class="lazy loaded"
-                      src="assets/images/web-services/ortfolio-img-3-r.webp"
+                      src="assets/images/web-services/const-img-3-r.webp"
                       alt="portfolio"
                       data-was-processed="true"
                       loading="lazy"
@@ -221,13 +221,13 @@
                     <a
                       class="black"
                       data-fancybox="port"
-                      href="assets/images/web-services/ortfolio-img-4-r.webp"
+                      href="assets/images/web-services/const-img-4-r.webp"
                       bis_skin_checked="1"
                     >
                       <figure>
                         <img
                           class="lazy loaded"
-                          src="assets/images/web-services/ortfolio-img-4-r.webp"
+                          src="assets/images/web-services/const-img-4-r.webp"
                           alt=""
                           data-was-processed="true"
                           loading="lazy"
