new revisions half done

--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
             </div>
             <div class="col-md-6">
               <div class="buttons">
-                <a href="#" class="btn btn-secondary rotating-border-button">
+                <a href="our-work.html" class="btn btn-secondary rotating-border-button">
                   Explore Case Study
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
@@ -1052,7 +1052,7 @@
             <div class="col-md-12">
               <figure class="logo-figure">
                 <img
-                  src="assets/images/logo-icon.png"
+                  src="assets/images/final-digi.svg"
                   alt="logo-icon"
                   class="logo-img"
                 />
