--- a/web-design-&-development.html
+++ b/web-design-&-development.html
@@ -244,7 +244,7 @@
             <div class="row card-slider">
               <div class="col-12 col-lg-3">
                 <div class="card-ser text-center">
-                  <i class="fas fa-wordpress icon fa-2x"></i>
+                  <i class="fa-brands fa-wordpress fa-2x"></i>
                   <h5 class="fw-700 py-3">WordPress Development</h5>
                   <p>
                     With our dedicated WordPress development services, we help
@@ -1034,7 +1034,7 @@
                                       <h3 class="generic-heading__xxl-medium-heading animate fadein">Ecommerce</h3></div>
                                   <div class="generic-panel__content large-txt">
                                       <p class="animate fadein">
-                                          <strong>We have helped leading government sectors in the UAE!</strong>
+                                          <strong>We have helped leading Ecommerce sectors in the UAE!</strong>
                                       </p>
                                   </div>
                               </div>
@@ -1045,8 +1045,8 @@
                                       </div>
                                   </div>
                                   <div class="generic-panel__content">
-                                      <p class="animate fadein-Up"><a href="/">Web Design &amp; Development</a>, <a href="/services/mobile-app-development-dubai/">Mobile App Development</a>, <a href="/services/digital-marketing-agency/">Digital Marketing</a>,
-                                          <a href="/services/seo-dubai/">SEO</a>, <a href="/services/social-media-marketing-dubai/">Social Media Marketing</a>, <a href="/services/erp-software-dubai/">ERP Software Solutions</a>.</p>
+                                      <p class="animate fadein-Up"><a href="web-design-&-development.html">Web Design &amp; Development</a>, <a href="mobile-app-development.html">Mobile App Development</a>,
+                                          <a href="social-media-marketing.html">Social Media Marketing</a>.</p>
                                   </div>
                               </div>
                           </div>
@@ -1217,8 +1217,8 @@
                                     </div>
                                 </div>
                                 <div class="generic-panel__content">
-                                    <p class="animate fadein-Up"><a href="/">Web Design &amp; Development</a>, <a href="/services/mobile-app-development-dubai/">Mobile App Development</a>, <a href="/services/digital-marketing-agency/">Digital Marketing</a>,
-                                        <a href="/services/seo-dubai/">SEO</a>, <a href="/services/social-media-marketing-dubai/">Social Media Marketing</a>, <a href="/services/erp-software-dubai/">ERP Software Solutions</a>.</p>
+                                  <p class="animate fadein-Up"><a href="web-design-&-development.html">Web Design &amp; Development</a>, <a href="mobile-app-development.html">Mobile App Development</a>,
+                                    <a href="social-media-marketing.html">Social Media Marketing</a>.</p>
                                 </div>
                             </div>
                         </div>
@@ -1302,8 +1302,8 @@
                                     </div>
                                 </div>
                                 <div class="generic-panel__content">
-                                    <p class="animate fadein-Up"><a href="/">Web Design &amp; Development</a>, <a href="/services/mobile-app-development-dubai/">Mobile App Development</a>, <a href="/services/digital-marketing-agency/">Digital Marketing</a>,
-                                        <a href="/services/seo-dubai/">SEO</a>, <a href="/services/social-media-marketing-dubai/">Social Media Marketing</a>, <a href="/services/erp-software-dubai/">ERP Software Solutions</a>.</p>
+                                  <p class="animate fadein-Up"><a href="web-design-&-development.html">Web Design &amp; Development</a>, <a href="mobile-app-development.html">Mobile App Development</a>,
+                                    <a href="social-media-marketing.html">Social Media Marketing</a>.</p>
                                 </div>
                             </div>
                         </div>
@@ -1387,8 +1387,8 @@
                                     </div>
                                 </div>
                                 <div class="generic-panel__content">
-                                    <p class="animate fadein-Up"><a href="/">Web Design &amp; Development</a>, <a href="/services/mobile-app-development-dubai/">Mobile App Development</a>, <a href="/services/digital-marketing-agency/">Digital Marketing</a>,
-                                        <a href="/services/seo-dubai/">SEO</a>, <a href="/services/social-media-marketing-dubai/">Social Media Marketing</a>, <a href="/services/erp-software-dubai/">ERP Software Solutions</a>.</p>
+                                  <p class="animate fadein-Up"><a href="web-design-&-development.html">Web Design &amp; Development</a>, <a href="mobile-app-development.html">Mobile App Development</a>,
+                                    <a href="social-media-marketing.html">Social Media Marketing</a>.</p>
                                 </div>
                             </div>
                         </div>
@@ -1472,8 +1472,8 @@
                                     </div>
                                 </div>
                                 <div class="generic-panel__content">
-                                    <p class="animate fadein-Up"><a href="/">Web Design &amp; Development</a>, <a href="/services/mobile-app-development-dubai/">Mobile App Development</a>, <a href="/services/digital-marketing-agency/">Digital Marketing</a>,
-                                        <a href="/services/seo-dubai/">SEO</a>, <a href="/services/social-media-marketing-dubai/">Social Media Marketing</a>, <a href="/services/erp-software-dubai/">ERP Software Solutions</a>.</p>
+                                  <p class="animate fadein-Up"><a href="web-design-&-development.html">Web Design &amp; Development</a>, <a href="mobile-app-development.html">Mobile App Development</a>,
+                                    <a href="social-media-marketing.html">Social Media Marketing</a>.</p>
                                 </div>
                             </div>
                         </div>
