--- a/social-media-marketing.html
+++ b/social-media-marketing.html
@@ -80,7 +80,7 @@
                 <a class="nav-link" href="our-work.html">Our Work</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
+                <a class="nav-link" href="about-us.html">About</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Blog</a>
