all case studies images update

--- a/logo-design.html
+++ b/logo-design.html
@@ -344,7 +344,7 @@
                       </div>
                       <div class="col_12 col_lg_4 col_xl_4 panel__center-image">
                           <div class="img-wrapper">
-                              <img src="assets/images/case-study/smm/port-1.png" data-src="assets/images/case-study/smm/port-1.png" alt="Government" width="491" height="576" class="img-hack lazy-loaded" loading="lazy">
+                              <img src="assets/images/logo-design-service/1.webp" data-src="assets/images/logo-design-service/1.webp" alt="Government" width="491" height="576" class="img-hack lazy-loaded" loading="lazy">
                           </div>
                       </div>
                       <div class="col_12 col_lg_5 col_xl_5 panel__right-content">
@@ -429,7 +429,7 @@
                     </div>
                     <div class="col_12 col_lg_4 col_xl_4 panel__center-image">
                         <div class="img-wrapper">
-                            <img src="assets/images/case-study/smm/port-4.png" data-src="assets/images/case-study/smm/port-4.png" alt="Government" width="491" height="576" class="img-hack lazy-loaded" loading="lazy">
+                            <img src="assets/images/logo-design-service/2.webp" data-src="assets/images/logo-design-service/2.webp" alt="Government" width="491" height="576" class="img-hack lazy-loaded" loading="lazy">
                         </div>
                     </div>
                     <div class="col_12 col_lg_5 col_xl_5 panel__right-content">
@@ -516,7 +516,7 @@
                     </div>
                     <div class="col_12 col_lg_4 col_xl_4 panel__center-image">
                         <div class="img-wrapper">
-                            <img src="assets/images/case-study/smm/port-7.png" data-src="assets/images/seo/smm/port-7.png" alt="Government" width="491" height="576" class="img-hack lazy-loaded" loading="lazy">
+                            <img src="assets/images/logo-design-service/3.webp" data-src="assets/images/logo-design-service/3.webp" alt="Government" width="491" height="576" class="img-hack lazy-loaded" loading="lazy">
                         </div>
                     </div>
                     <div class="col_12 col_lg_5 col_xl_5 panel__right-content">
@@ -601,7 +601,7 @@
                     </div>
                     <div class="col_12 col_lg_4 col_xl_4 panel__center-image">
                         <div class="img-wrapper">
-                            <img src="assets/images/case-study/smm/port-3.png" data-src="assets/images/seo/smm/port-3.png" alt="Government" width="491" height="576" class="img-hack lazy-loaded" loading="lazy">
+                            <img src="assets/images/logo-design-service/4.webp" data-src="assets/images/logo-design-service/4.webp" alt="Government" width="491" height="576" class="img-hack lazy-loaded" loading="lazy">
                         </div>
                     </div>
                     <div class="col_12 col_lg_5 col_xl_5 panel__right-content">
@@ -686,7 +686,7 @@
                     </div>
                     <div class="col_12 col_lg_4 col_xl_4 panel__center-image">
                         <div class="img-wrapper">
-                            <img src="assets/images/case-study/smm/port-6.png" data-src="assets/images/case-study/smm/port-6.png" alt="Government" width="491" height="576" class="img-hack lazy-loaded" loading="lazy">
+                            <img src="assets/images/logo-design-service/5.webp" data-src="assets/images/logo-design-service/5.webp" alt="Government" width="491" height="576" class="img-hack lazy-loaded" loading="lazy">
                         </div>
                     </div>
                     <div class="col_12 col_lg_5 col_xl_5 panel__right-content">
