--- a/mobile-app-development.html
+++ b/mobile-app-development.html
@@ -323,7 +323,7 @@
                       </div>
                       <div class="col_12 col_lg_4 col_xl_4 panel__center-image">
                           <div class="img-wrapper">
-                              <img src="assets/images/ui-ux-service/app-ser-1.png" data-src="assets/images/ui-ux-service/app-ser-1.png" alt="Government" width="491" height="576" class="img-hack lazy-loaded" loading="lazy">
+                              <img src="assets/images/mobile-app-service/mobile-app1.jpg" data-src="assets/images/mobile-app-service/mobile-app1.jpg" alt="Government" width="491" height="576" class="img-hack lazy-loaded" loading="lazy">
                           </div>
                       </div>
                       <div class="col_12 col_lg_5 col_xl_5 panel__right-content">
@@ -408,7 +408,7 @@
                     </div>
                     <div class="col_12 col_lg_4 col_xl_4 panel__center-image">
                         <div class="img-wrapper">
-                            <img src="assets/images/ui-ux-service/app-ser-4.png" data-src="assets/images/ui-ux-service/app-ser-4.png" alt="Government" width="491" height="576" class="img-hack lazy-loaded" loading="lazy">
+                            <img src="assets/images/mobile-app-service/mobile-app2.jpg" data-src="assets/images/mobile-app-service/mobile-app2.jpg" alt="Government" width="491" height="576" class="img-hack lazy-loaded" loading="lazy">
                         </div>
                     </div>
                     <div class="col_12 col_lg_5 col_xl_5 panel__right-content">
@@ -497,7 +497,7 @@
                     </div>
                     <div class="col_12 col_lg_4 col_xl_4 panel__center-image">
                         <div class="img-wrapper">
-                            <img src="assets/images/ui-ux-service/app-ser-2.png" data-src="assets/images/ui-ux-service/app-ser-2.png" alt="Government" width="491" height="576" class="img-hack lazy-loaded" loading="lazy">
+                            <img src="assets/images/mobile-app-service/mobile-app3.jpg" data-src="assets/images/mobile-app-service/mobile-app3.jpg" alt="Government" width="491" height="576" class="img-hack lazy-loaded" loading="lazy">
                         </div>
                     </div>
                     <div class="col_12 col_lg_5 col_xl_5 panel__right-content">
@@ -583,7 +583,7 @@
                     </div>
                     <div class="col_12 col_lg_4 col_xl_4 panel__center-image">
                         <div class="img-wrapper">
-                            <img src="assets/images/ui-ux-service/app-ser-3.png" data-src="assets/images/ui-ux-service/app-ser-3.png" alt="Government" width="491" height="576" class="img-hack lazy-loaded" loading="lazy">
+                            <img src="assets/images/mobile-app-service/mobile-app4.jpg" data-src="assets/images/mobile-app-service/mobile-app4.jpg" alt="Government" width="491" height="576" class="img-hack lazy-loaded" loading="lazy">
                         </div>
                     </div>
                     <div class="col_12 col_lg_5 col_xl_5 panel__right-content">
