--- a/video-animation.html
+++ b/video-animation.html
@@ -294,7 +294,7 @@
                       </div>
                       <div class="col_12 col_lg_4 col_xl_4 panel__center-image">
                           <div class="img-wrapper">
-                              <img src="assets/images/case-study/smm/port-1.png" data-src="assets/images/case-study/smm/port-1.png" alt="Government" width="491" height="576" class="img-hack lazy-loaded" loading="lazy">
+                              <img src="assets/images/video-animation-service/video-animation1.jpg" data-src="assets/images/video-animation-service/video-animation1.jpg" alt="Government" width="491" height="576" class="img-hack lazy-loaded" loading="lazy">
                           </div>
                       </div>
                       <div class="col_12 col_lg_5 col_xl_5 panel__right-content">
@@ -379,7 +379,7 @@
                     </div>
                     <div class="col_12 col_lg_4 col_xl_4 panel__center-image">
                         <div class="img-wrapper">
-                            <img src="assets/images/case-study/smm/port-4.png" data-src="assets/images/case-study/smm/port-4.png" alt="Government" width="491" height="576" class="img-hack lazy-loaded" loading="lazy">
+                            <img src="assets/images/video-animation-service/video-animation2.jpg" data-src="assets/images/video-animation-service/video-animation2.jpg" alt="Government" width="491" height="576" class="img-hack lazy-loaded" loading="lazy">
                         </div>
                     </div>
                     <div class="col_12 col_lg_5 col_xl_5 panel__right-content">
@@ -466,7 +466,7 @@
                     </div>
                     <div class="col_12 col_lg_4 col_xl_4 panel__center-image">
                         <div class="img-wrapper">
-                            <img src="assets/images/case-study/smm/port-7.png" data-src="assets/images/seo/smm/port-7.png" alt="Government" width="491" height="576" class="img-hack lazy-loaded" loading="lazy">
+                            <img src="assets/images/video-animation-service/video-animation3.jpeg" data-src="assets/images/video-animation-service/video-animation3.jpeg" alt="Government" width="491" height="576" class="img-hack lazy-loaded" loading="lazy">
                         </div>
                     </div>
                     <div class="col_12 col_lg_5 col_xl_5 panel__right-content">
@@ -551,7 +551,7 @@
                     </div>
                     <div class="col_12 col_lg_4 col_xl_4 panel__center-image">
                         <div class="img-wrapper">
-                            <img src="assets/images/case-study/smm/port-3.png" data-src="assets/images/seo/smm/port-3.png" alt="Government" width="491" height="576" class="img-hack lazy-loaded" loading="lazy">
+                            <img src="assets/images/video-animation-service/video-animation4.jpeg" data-src="assets/images/video-animation-service/video-animation4.jpeg" alt="Government" width="491" height="576" class="img-hack lazy-loaded" loading="lazy">
                         </div>
                     </div>
                     <div class="col_12 col_lg_5 col_xl_5 panel__right-content">
