--- a/index.html
+++ b/index.html
@@ -133,9 +133,7 @@
             <div class="content">
               <h5 class="dot">About Us</h5>
               <h2>
-                <span class="different">Digitexsol </span><span class="animated-heading">creative digital agency
-                  specializes in designing and executing innovative digital solutions to help businesses grow. From
-                  branding and graphic design to web development...</span>
+                <span class="different">Digitexsol </span><span class="animated-heading">creative digital agency specializes in designing and executing innovative digital solutions to help businesses grow. From branding and graphic design to web development...</span>
               </h2>
               <div class="buttons">
                 <a href="#" class="btn btn-secondary rotating-border-button">
