--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
       </div>
     </section>
     <div class="main-bg">
-      <section class="service-section animated-section">
+      <section class="service-section">
         <div class="row">
           <div class="content">
             <h1>Our Services</h1>
